potential fix for nav on ios

--- a/src/app/footer/footer.component.less
+++ b/src/app/footer/footer.component.less
@@ -33,9 +33,9 @@ footer{display: flex; flex-direction: row; justify-content: flex-start; align-it
         span{
             &.site-credit{margin-left: 0; margin-top: 20px; align-items: flex-start; align-self: flex-start;}
         }
-        .location-container{padding-left: 0; margin-top: 20px;}
-        .sponsor-container{padding-left: 0; margin-top: 20px;}
-        .contact-container{padding-left: 0; margin-top: 20px;}
-        .additional-links-container{padding-left: 0; margin-top: 20px;}
+        .location-container{padding-left: 0; margin-top: 25px;}
+        .sponsor-container{padding-left: 0; margin-top: 25px;}
+        .contact-container{padding-left: 0; margin-top: 25px;}
+        .additional-links-container{padding-left: 0; margin-top: 25px;}
     }
 }
